# IDE

./: .dockerignore  .gitignore  CR  Dockerfile.network  Filestrukture.md  README.md  build-win.bat  dev.env  docker-compose.yml  net.dev.env  net.prod.env  pyproject.toml
GatewayIDE.App/: App.cs  AppBootstrap.cs  Commands.cs  Converters.cs  DelegateCommand.cs  GatewayIDE.App.csproj  MainCommands.cs  MainLayoutState.cs  MainState.cs  MainWindow.axaml  MainWindow.cs  ViewModelBase.cs
GatewayIDE.App/Services/: README.md
GatewayIDE.App/Services/App/: AppState.cs  GatewayIDEConfig.cs  NetworkRegistryModels.cs  RegistryService.cs  ServiceRegistryModels.cs  SettingsService.cs
GatewayIDE.App/Services/Auth/: AuthBootstrapService.cs
GatewayIDE.App/Services/Chat/: ChatService.Isolation.cs  ChatService.cs
GatewayIDE.App/Services/Docker/: DockerService.Isolation.cs  DockerService.cs
GatewayIDE.App/Services/Network/: GitHubDeviceFlow.cs  NetworkApiService.cs  NetworkDtos.cs  NetworkHost.cs  NetworkSession.cs  WireGuardKeys.cs
GatewayIDE.App/Views/: Layout.axaml  Layout.cs  LayoutState.cs  LeftRail.axaml  LeftRail.cs  MainLayout.axaml  MainLayout.cs  MainWindowViewModel.cs  _StubsWhenDisabled.cs
GatewayIDE.App/Views/Chat/: ChatState.cs  SidePanel.axaml  SidePanel.cs
GatewayIDE.App/Views/Dashboard/: DashboardPanel.axaml  DashboardPanel.cs  DashboardPanelState.cs
Installer/: portal.iss
Installer/tools/: portal-prereq.ps1
Network/: bootstrap.py  main.py  pyproject.toml
Network/network/: README  models.py  nebula.py  store.py  wireguard.py
Network/routes/: admin_network.py  network.py
(+37 files in other folders)
